--- a/styles.css
+++ b/styles.css
@@ -143,11 +143,11 @@ footer p {
     }
 
     body a {
-        color: #aae;
+        color: #a8e;
     }
 
     body a:hover {
-        color: #88f;
+        color: #caf;
     }
 
     header, footer {
@@ -164,5 +164,15 @@ footer p {
     main h1, h2, h3, h4, h5, h6, strong {
         color: #edd;    
     }
+
+    nav a {
+        color: #a88;    
+    }
+
+    nav a:hover {
+        color: #d99;
+        transition: color 0.2s ease;
+    }
+
 
 }
