modified dark mode colors

--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ body a:hover {
 header, footer {
     padding: 0;
     text-align: center;
-    background-color: #eee;
+    background-color: #eef0f0;
 }
 
 div.logo {
